--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "5.5.3",
     "typescript-eslint": "8.0.0",
     "vite": "5.4.0",
+    "vite-plugin-svgr": "4.2.0",
     "vite-tsconfig-paths": "5.0.1"
   }
 }
