--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "11.13.0",
     "@fontsource/roboto": "5.0.14",
     "@mui/material": "5.16.7",
+    "dayjs": "1.11.12",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
